--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Your New Jekyll Site
     {% endfor %}
   </ul>
 </div>
-
-
+<div id="my-button" class="btn btn-default"> My Button</div>
+<div id="my-button2" class="btn btn-default"> Click me!</div>
 
 
 
