--- a/_posts/2014-02-18-my-first-post.html
+++ b/_posts/2014-02-18-my-first-post.html
@@ -1,14 +1,15 @@
 ---
 layout: post
 title: "my first post!"
-date:2014-02-18 01:30:45
-categories:kenya html
+date: 2014-02-18 01:30:45
+categories: kenya html
 ---
 <h1>this is my post!</h1>
 
   <p>{{page.categories}}</p> 
       <div id "container">
       <div style = "color: blue"> 
+      <div style = "color: red">
 Felling sleepy
       </div> 
 Some other words, you know i love to talk.
